--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -9,25 +9,20 @@
     scroll-behavior: smooth;
 }
 
-body {
-    background-image: url("../img/bg.jpg");
-    background-size: 600px;
-    background-repeat: repeat;
-}
-
 .header {
-    padding: 0.8rem 0 0 0;
+    background: green;
 }
 
 .main {
     padding: 1rem;
-    background: #fff
+    background: #fff;
+    box-shadow: 0 0 1.25rem 1px rgb(0 0 0 / 10%);
 }
 
 .footer {
-    padding: 1rem;
+    background: green;
+    padding: 0.5rem;
     color: #fff;
-    bottom: 0;
 }
 
 h1 {
