--- a/assets/css/equipe.css
+++ b/assets/css/equipe.css
@@ -1,6 +1,5 @@
 body {
     min-height: 100vh;
-    background: linear-gradient(to bottom, #000428, #004683);
 }
 
 .row {
@@ -9,10 +8,10 @@ body {
     justify-content: center;
 }
 
-.container .col-xs-6 .col-sm-3 {
+/* .container .col-xs-6 .col-sm-3 {
     display: flex;
     justify-content: center;
-}
+} */
 
 .card {
     position: relative;
@@ -20,21 +19,21 @@ body {
     margin: 0 !important;
     border-radius: 20px;
     overflow: hidden;
-    width: 450px;
-    height: 500px;
+    width: 200px;
+    height: 240px;
     cursor: pointer;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
 }
 
 .card .card-image {
     width: 100%;
-    height: 500px;
+    height: 240px;
     background: #000;
 }
 
 .card .card-image img {
     width: 100%;
-    max-height: 500px;
+    max-height: 240px;
     object-fit: cover;
 }
 
