--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -9,19 +9,30 @@
     scroll-behavior: smooth;
 }
 
-.header {
-    background: green;
+.header, .footer {
+    background: #024702;
+}
+
+a.nav-link {
+    color: #fff;
+}
+
+a.nav-link:hover {
+    color: #ffe819;
+    font-weight: bold;
 }
 
 .main {
     padding: 1rem;
-    background: #fff;
+    justify-content: center;
     box-shadow: 0 0 1.25rem 1px rgb(0 0 0 / 10%);
 }
 
 .footer {
-    background: green;
-    padding: 0.5rem;
+    padding: 1rem 0 0.5rem 0;
+    bottom: 0;
+    left: 0;
+    width: 100%;
     color: #fff;
 }
 
@@ -30,5 +41,5 @@ h1 {
 }
 
 p {
-    padding: 0 3rem 1rem 3rem;
+    padding: 0 3rem 0 3rem;
 }
