--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -9,6 +9,11 @@
     scroll-behavior: smooth;
 }
 
+body {
+    min-height: 100vh;
+    position: relative;
+}
+
 .header, .footer {
     background: #024702;
 }
@@ -28,18 +33,16 @@ a.nav-link:hover {
     box-shadow: 0 0 1.25rem 1px rgb(0 0 0 / 10%);
 }
 
+h1 {
+    padding: 1rem 0 1rem 0;
+    font-weight: bold;
+}
+
 .footer {
     padding: 1rem 0 0.2rem 0;
     bottom: 0;
     left: 0;
     width: 100%;
     color: #fff;
-}
-
-h1 {
-    padding: 1rem 0 1rem 0;
-}
-
-p {
-    padding: 0 3rem 0 3rem;
+    position: absolute;
 }
